tests/chainsaw-multi-ns/ingresses/namespace-unwatched/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server-unwatched
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: test-server-unwatched
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-server-unwatched
    spec:
      containers:
        - name: test-server
          image: nginx:alpine
          ports:
            - containerPort: 80
              name: http
