tests/chainsaw-multi-ns/ingresses/namespace-unwatched/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-unwatched
  namespace: default
  labels:
    app.kubernetes.io/name: test-server-unwatched
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: test-server-unwatched
